--- a/jetfi_wifi_jp/css/wifi-style.css
+++ b/jetfi_wifi_jp/css/wifi-style.css
@@ -142,12 +142,12 @@ select{ appearance:none; -moz-appearance:none; -webkit-appearance:none; -ms-appe
 .main_container ul.capacity_content li .capacity_img span.top_sub_title{ display: block; min-height: 40px; display: -webkit-flex; display: flex; -webkit-align-items: center; align-items: center; -webkit-justify-content: center; justify-content: center;}
 .main_container ul.capacity_content li .capacity_img span.main_title{ font-size: 19.5px; font-weight: 600; display: block;}
 
-.main_container ul.capacity_content li .capacity_img::after{ content:""; position: absolute; right: 10px; top: 5px; width: 50px; height: 64px; display: block; }
-.main_container ul.capacity_content li .capacity_00::after{ background-image: url(../images/svg/capacity_img_00.svg);}
-.main_container ul.capacity_content li .capacity_01::after{ background-image: url(../images/svg/capacity_img_01.svg);}
-.main_container ul.capacity_content li .capacity_02::after{ background-image: url(../images/svg/capacity_img_02.svg);}
-.main_container ul.capacity_content li .capacity_03::after{ background-image: url(../images/svg/capacity_img_03.svg);}
-.main_container ul.capacity_content li .capacity_04::after{ background-image: url(../images/svg/capacity_img_04.svg);}
+.main_container ul.capacity_content li .capacity_img::after{ content:""; position: absolute; right: 10px; top: 5px; width: 50px; height: 64px; display: block; font-weight: 500;}
+.main_container ul.capacity_content li .capacity_00::after{ background-image: url(../images/capacity_img_00.png);}
+.main_container ul.capacity_content li .capacity_01::after{ background-image: url(../images/capacity_img_01.png);}
+.main_container ul.capacity_content li .capacity_02::after{ background-image: url(../images/capacity_img_02.png);}
+.main_container ul.capacity_content li .capacity_03::after{ background-image: url(../images/capacity_img_03.png);}
+.main_container ul.capacity_content li .capacity_04::after{ background-image: url(../images/capacity_img_04.png);}
 .main_container ul.capacity_content li.no_subtitle .capacity_img::after{top: 3px;}
 .main_container ul.capacity_content li.main_unlimited{ min-width: 200px; }
 
