--- a/iiot/app_web/shop- takeapart/css/standard-flow.css
+++ b/iiot/app_web/shop- takeapart/css/standard-flow.css
@@ -226,10 +226,10 @@ p.error i{ padding-right: 5px; }
 
 .shopping_cart ul.the_btn{ width: 100%; max-width: 800px;  padding: 15px  0; text-align: center; margin: 0 auto;}
 .shopping_cart ul.the_btn li{  display: inline-block; margin: 0 2px 10px 2px;}
-.shopping_cart ul.the_btn li p{ font-size: 16px; display: inline-block; cursor: pointer; border-radius: 50px; padding: 0px 10px; font-size: 14px; color: #5f6368; line-height: 38px; height: 40px; border:2px solid #f0f0f0; background-color: #fff; min-width: 100px; text-align: center; }
-.shopping_cart ul.the_btn li p a{ color: #5f6368; display: block;}
+.shopping_cart ul.the_btn li .btn_line{ font-size: 16px; display: inline-block; cursor: pointer; border-radius: 50px; padding: 0px 10px; font-size: 14px; color: #5f6368; line-height: 38px; height: 40px; border:2px solid #f0f0f0; background-color: #fff; min-width: 100px; text-align: center; }
+.shopping_cart ul.the_btn li .btn_line a{ color: #5f6368; display: block;}
 .shopping_cart ul.the_btn li span{ display: block;}
-.shopping_cart ul.the_btn li.the_selected p{ border-color: #ffcd00; }
+.shopping_cart ul.the_btn li.the_selected .btn_line{ border-color: #ffcd00; }
 
 .shopping_cart .time_choosed{ line-height: 38px; height: 40px; max-width: 318px; cursor: pointer; margin: 0 auto; border-radius: 50px; border: 2px solid #f0f0f0; padding: 0 15px;}
 .shopping_cart .time_choosed p{ font-size: 13px; }
