--- a/WS/weip/css/style.css
+++ b/WS/weip/css/style.css
@@ -37,7 +37,8 @@ header.header{ width: 100%; position: fixed; top: 0; z-index: 50; -webkit-transi
 .header .main-nav .nav-item::before { content: ''; display: block; background: #000; width:100%; height: 24px; position: absolute; top: 50%; left: 50%; -webkit-transform: translate(-50%, -50%) skewX(-15deg); transform: translate(-50%, -50%) skewX(-15deg); -webkit-transition: .25s ease-in-out; transition: .25s ease-in-out; z-index: -1;}
 .header .main-nav .nav-item::after{ opacity: 0; content: ''; display: block; background: #d8d451; width:100%; height: 24px; position: absolute; top: 66%; left: 54%; -webkit-transform: translate(-50%, -50%) skewX(-15deg); transform: translate(-50%, -50%) skewX(-15deg); -webkit-transition: .25s ease-in-out; transition: .25s ease-in-out; z-index: -2;} 
 .header .main-nav .nav-item:hover::after{ opacity: 1; }
-.main-wrapper{ width: 100%; background: url(../images/bg-0.png) center center no-repeat; background-size: cover; background-attachment: fixed; }
+
+.main-wrapper{ width: 100%; /*background: url(../images/bg-0.png) center center no-repeat; */background-size: cover; background-attachment: fixed; }
 
 /*about*/
 .main-wrapper .about .vi-logo { max-width: 800px; border-radius: inherit; background-size: contain; margin: 0 auto; background-position: center center; background-repeat: no-repeat;}
@@ -96,6 +97,11 @@ footer.footer .ft-box a{ display: inline-block; padding: 18px 18px 0; margin-bot
 footer.footer .ft-box a.fb { width: 44px; height: 44px; display: block; background: url(../images/facebook.svg) center center no-repeat; background-size: cover; background-color: #fff; border-radius: 8px; margin: 0 auto 30px auto; }
 footer.footer .logo { width: 270px; height: 0; border-radius: inherit; padding-bottom: 16.666666%; background-size: cover; background-position: center center; background-repeat: no-repeat;}
 footer.footer .copyright { font-size: .75rem; margin-top: 5px; color: #fff;}
+
+body:not(.home) .bg-anibox{ opacity: 0.6; position: relative; z-index: -1;}
+.bg.bg-color { background: #7bbaa9;}
+.bg { position: fixed; width: 100vw; height: 100vh; border-radius: inherit; bottom: 0; left: 0;background-size: cover; background-position: center center;  background-repeat: no-repeat; z-index: -10;}
+.bg.bg-multiply { mix-blend-mode: multiply;}
 
 .nav-mobile {
     padding: 0 10px;
