--- a/WS/weip/css/style.css
+++ b/WS/weip/css/style.css
@@ -1,7 +1,8 @@
 @charset "utf-8";
 /* CSS Document */
-@import url("https://fonts.googleapis.com/css?family=Noto+Sans+TC:700&display=swap&subset=chinese-traditional")
+@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC:700&display=swap&subset=chinese-traditional);
 @import url(animate.css);
+
 html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary, time, mark, audio, video { margin: 0; padding: 0; border: 0; outline: 0; font-size: 100%; vertical-align: baseline; }
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display: block; }
 blockquote, q { quotes: none; }
@@ -196,12 +197,24 @@ body:not(.home) .bg-anibox{ opacity: 0.6; position: relative; z-index: -1;}
 	.main-wrapper .about p.title-underline{ font-size: 1.350rem;}
 	.title-underline::before{ height: 8px; }
 	.main-wrapper .video .col-lg{ -ms-flex: 0 0 100%;  flex: 0 0 100%;  max-width: 100%;}
-	.main-wrapper .pf-item{ margin-bottom: 25PX; }
+	.main-wrapper .pf-item{ margin-bottom: 25px; }
 	.main-wrapper .row{ margin-top: 0 !important; }
 	.main-wrapper .video iframe{ height: 200px; }
 	.main-wrapper .sec-title{ font-size: 1.35rem; }
 	.main-wrapper .sec-title span{ font-size: 1.8rem; top: -5px; }
 	.main-wrapper .lecture .editor p{text-align: left;}
+}
+@media (max-width: 575px){
+	.main-wrapper .col-lg { -ms-flex: 0 0 85%; flex: 0 0 85%; max-width: 85%; margin: 0 auto;}
+	.main-wrapper .judge .pf-item { -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-direction: row; flex-direction: row; -webkit-box-align: end; -ms-flex-align: end; align-items: flex-end;}
+	.main-wrapper .judge .pf-item .card-img { -webkit-box-flex: 0; -ms-flex: 0 0 45%; flex: 0 0 45%;  padding-bottom: 60%;}
+	.main-wrapper .judge .pf-item .card-body { -webkit-box-flex: 0; -ms-flex: 0 0 55%; flex: 0 0 55%; padding-left: 30px; margin: 0;}
+	.main-wrapper .judge .pf-item .card-img .img { top: calc(50% + 10px); left: calc(50% + 15px); }
+}
+@media (max-width: 480px){
+	.main-wrapper .judge .pf-item { -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: start; -ms-flex-align: start; align-items: flex-start; padding: 0 30px;}
+	.main-wrapper .judge .pf-item .card-img { padding-bottom: 125%;}
+	.main-wrapper .judge .pf-item .card-body { padding: 0; margin: 15px -30px;}
 }
 @media (max-width:450px) {
 	.header nav{ padding-left: 20px;}
