--- a/WS/weip/css/style.css
+++ b/WS/weip/css/style.css
@@ -51,7 +51,7 @@ header.header{ width: 100%; position: fixed; top: 0; z-index: 50; -webkit-transi
 .main-wrapper .about p{ font-weight: 700; }
 .main-wrapper .container{ max-width: 1140px; margin: 0 auto; padding: 40px 15px;}
 
-.title-underline{ display: inline-block; font-family: 'Noto Sans TC', sans-serif; font-size: 2.5rem; font-weight: 700; letter-spacing: 5px; padding: 0 10px; position: relative;}
+.title-underline{ display: inline-block; font-family: 'Noto Sans TC', sans-serif; font-size: 2.5rem; font-weight: 700; letter-spacing: 5px; padding: 0 10px; position: relative; z-index: 10;}
 .title-underline::before { content: ''; display: block; width: 100%; height: 20px; background: #d8d451; position: absolute; bottom: -2px; left: 0; z-index: -1; -webkit-transform: skewX(-15deg); transform: skewX(-15deg);}
 
 .main-wrapper .sec-title{ font-family: 'Noto Sans TC', sans-serif; font-size: 3rem; font-weight: 700; letter-spacing: 3px; line-height: 1.2; margin-bottom: 30px;}
