--- a/marryMe/css/index.css
+++ b/marryMe/css/index.css
@@ -67,6 +67,12 @@ img.mob{display: none;}
 .result_contents .fraction_box{ width: 280px; height: 280px; margin:50px auto 0 auto; display: block; background: url(../images/index/bg_fraction.png) center center no-repeat; background-size: contain; display: -webkit-flex; display: flex; -webkit-align-items: center; align-items: center; -webkit-justify-content: center; justify-content: center;}
 .result_contents .fraction_box p{ font-size: 76px; text-align: center; font-weight: bold; color: #fff; margin-bottom: 2rem; text-shadow: 0 5px 5px rgb(132 74 95 / 52%); }
 
+.other_app{ width: 100%; max-width: 800px; margin: 0 auto; }
+.other_app ul{ width: 100%; }
+.other_app ul li{ width: 25%; float: left; padding:0 20px 20px 20px; }
+.other_app ul li a{ display: block; border-radius: 10px; overflow: hidden; box-shadow: 0 5px 5px rgb(181 159 167 / 52%);transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; }
+.other_app ul li a:hover{ opacity: .8; }
+
 @keyframes mainKvTitle {
     0% {transform: translateY(-100vh) rotate(0deg);}
     20% {transform: translateY(-50vh) rotate(5deg);}
@@ -156,6 +162,8 @@ img.mob{display: none;}
     .result_contents .result_fee{ bottom: -58px; }
     .result_contents p.congratulations{ font-size: 22px; }
     .go_pay{ padding-top: 80px; }
+    .other_app ul{ max-width: 360px; margin: 0 auto; }
+    .other_app ul li{ width: 50%; padding: 10px; }
 }
 @media (max-width:500px){
     .form_box .w50{ padding: 10px 20px; }
@@ -168,6 +176,8 @@ img.mob{display: none;}
     .result_contents .result_fee{ bottom: -35px; }
     .result_contents p.congratulations{ font-size: 20px; padding: 40px 20px 15px 20px;}
     .go_pay{ padding-top: 40px;}
+    .other_app ul{ max-width:280px; margin: 0 auto; }
+    .result_contents .result_infobox p{ font-size: 18px; }
 }
 
 @media (max-width:400px){
@@ -176,6 +186,8 @@ img.mob{display: none;}
     .main_KV .subtitle .the_result{ margin: 0 20px;}
     .result_contents p.congratulations{ font-size: 17px; padding: 20px 20px 5px 20px;}
     .form_box .result_ill:nth-child(2)::after{ right: -30px; }
+    .result_contents .result_infobox p{ font-size: 16px; }
+    .other_app ul{ max-width:260px; margin: 0 auto; }
 }
 /*-------- popup ---------*/
 .wrap_popup {  position: fixed; top: 0; left: 0; width: 100%; height: 100vh; color: #333; transition: .5s; z-index: -1; background: transparent;}
